fixed small icon on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,6 +84,7 @@
       width: 40%;
       border-radius: 15%;
       opacity: 0.7;
+      min-width: 160px;
     }
 
     &-container{
@@ -91,11 +92,12 @@
       flex-direction: row;
       justify-content: flex-start;
       width: 30%;
+      min-width: 160px;
     }
 
     &-bluesky{
       margin-top: 0.3rem;
-      width: 20%;
+      width: 15%;
       fill: variables.$TEXT_COLOR;
       opacity: 0.8;
       &:hover{
@@ -107,7 +109,7 @@
     &-googlescholar{
       margin-top: 0.2rem;
       margin-left: 0.5rem;
-      width: 20%;
+      width: 15%;
       border-radius: 14%;
       color: variables.$TEXT_COLOR;
       opacity: 0.8;
@@ -120,7 +122,7 @@
     &-linkedin{
       margin-top: 0.23rem;
       margin-left: 0.5rem;
-      width: 20%;
+      width: 15%;
       border-radius: 14%;
       color: variables.$TEXT_COLOR;
       opacity: 0.6;
